--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,27 @@
 {
+    "version": 2,
     "builds": [
-        {
-          "src": "studybud/wsgi.py",
-          "use": "@vercel/python",
-          "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.3" }
-        }],
-        "routes": [
-            {
-                "src": "/static/(.*)",
-                "dest": "/static/$1"
-              },
-            {
-              "src": "/(.*)",
-              "dest": "studybud/wsgi.py"
-            }
-          ]
-}
+      {
+        "src": "studybud/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.3" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "studybud/wsgi.py"
+      }
+    ]
+  }
